# malgam

./: .gitattibutes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  design.txt  rustfmt.toml
.github/workflows/: greetings.yml
crates/draft-cli/src/: main.rs
crates/draft-core/: Cargo.toml  README.md  rust-toolchain.toml
crates/draft-core/src/: ast.rs  compile.rs  data.rs  expr.rs  ext.rs  lib.rs  macros.rs  markup.rs  object.rs  tape.rs  token.rs  visitor.rs
crates/draft-core/src/data/: mod.rs  parser.rs  serde.rs
crates/draft-core/src/expr/: macros.rs
crates/draft-core/src/macros/: mod.rs
crates/draft-core/src/markup/: config.rs  lexer.rs  lexer_utils.rs  mod.rs  parser.rs  parser_utils.rs  traversal.rs  traversal_utils.rs  visitors.rs  vocab.rs
crates/draft-core/src/object/: mod.rs  parser.rs
crates/malgam-cli/: Cargo.toml  README.md
crates/malgam-cli/src/: main.rs
crates/malgam-core/: Cargo.toml  README.md
crates/malgam-core/src/: char_ext.rs  ext.rs  hgon.rs  lib.rs  macros.rs  mal.rs  malo.rs  parser.rs  slice_ext.rs  tape.rs  token.rs
crates/malgam-editor/: Cargo.toml  README.md
crates/malgam-lsp/: Cargo.toml  README.md
crates/malgam-mgon/: Cargo.toml
editors/draft/: CHANGELOG.md
editors/vscode/: README.md  package.json  vsc-extension-quickstart.md
editors/vscode/syntaxes/: draft.tmLanguage.json
samples/: config.mgon  remedies.lrmc  remedies.mal  remedies.mg  remedies.mgd
src/: char_ext.rs  etc.rs  macro.rs  main.rs  parser.rs  slice_ext.rs  tape.rs  token.rs
talon/: drml.py  drml.talon
