[package]
name = "draft-core"
version = "0.1.0"
edition = "2024"
authors = ["Angel Eckardt <eckardt.angel7@outlook.com>"]
license = "AGPL-3.0-only"
homepage = "https://github.com/aeckar/draft"
repository = "https://github.com/aeckar/draft"

[dependencies]
enum-ordinalize = "4.3.2"
thiserror = "2.0.18"

# arena allocator for intermediate results of AST visitor
bumpalo = "3.20.2"

# vectorized UTF-8 validation for file input
simdutf8 = "0.1.5"

# runtime execution of user-defined JavaScript macros
boa_engine = "0.21.0"

# vectorized byte search for `Tape`
memchr = "2.8.0"

# conversion from Markdown to Draft (`draft migrate`)
pulldown-cmark = "0.13.3"

# table conversions from CSV
csv = "1.4.0"

# faster than `std`
# provides partial parsing for object notation
lexical-core = { version = "1.0.6", default-features = false, features = [
    "parse-floats",
    "write-floats",
] }

# expose serialization hooks for object notation
# JSON (de)serialization support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

[features]
# default = ["compile", "format"]
# compile = []
# format = []
# transpile = ["markdown-parser-crate"] # Only pull in Markdown deps if needed

[lib]
path = "src/lib.rs"
