[package]
name = "malgam-cli"
version = "0.1.0"
edition = "2024"
authors = ["Angel Eckardt <eckardt.angel7@outlook.com>"]
license = "AGPL-3.0-only"
homepage = "https://github.com/aeckar/malgam"
repository = "https://github.com/aeckar/malgam"

[dependencies]
malgam-core = { path = "../malgam-core" }
clap = { version = "4.6.0", features = ["derive", "unstable-doc", "unstable-styles"] }
anyhow = "1.0.102"